--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "next": "14.1.4",
+    "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18"
   },
