--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "14.1.4",
     "path": "^0.12.7",
+    "puppeteer": "^22.11.2",
     "react": "^18",
     "react-dom": "^18"
   },
