--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
-    "next": "14.1.4",
+    "next": "^14.2.4",
     "path": "^0.12.7",
     "puppeteer": "^22.11.2",
     "react": "^18",
